[package]
name = "twt_2_tg_bot"
version = "0.1.0"
authors = ["Vladimir Vlasov <vladimir.vlasov@extcom.com>"]
edition = "2018"

[lib]
name = "bot"
path = "src/bot/bot.rs"

[[bin]]
name = "twt_2_tg_bot"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5.0", features = ["auto-send"] }
mime = "0.3.16"
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.3"
egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode", rev = "6b81073eba9" }
regex = "1.5"
htmlescape = "0.3.1"
tempfile = "3.2.0"
reqwest = "0.10.4"
error-chain = "0.12.4"
async-trait = "0.1.50"
warp = "0.3.0"
serde_json = "1.0.50"