[package]
name = "twt_2_tg_bot"
version = "1.1.0"
authors = ["Vladimir Vlasov <vladimir.vlasov@extcom.com>"]
edition = "2018"

[lib]
name = "bot"
path = "src/bot/bot.rs"

[[bin]]
name = "twt_2_tg_bot"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.11.0", features = ["macros", "auto-send", "webhooks-axum"] }
mime = "0.3.16"
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode", rev = "6b81073eba9" }
regex = "1.5"
htmlescape = "0.3.1"
tempfile = "3.2.0"
reqwest = "0.11.11"
error-chain = "0.12.4"
async-trait = "0.1.50"
serde_json = "1.0.50"
serde = "1.0.136"
url = "2.3.1"